Add initial project structure with entities, repositories, services, and controllers for aula reservation system